(feat)[Home] recentBlog component and add image(not work)

--- a/content/blog/the-art-of-architectural-restoration.mdx
+++ b/content/blog/the-art-of-architectural-restoration.mdx
@@ -7,7 +7,7 @@ categories:
   - title: Renovation
   - title: Urban Planning
 type: "Post"
-image: "/images/post-2-min.jpg"
+image: "/images/IA.jpg"
 ---
 
 ## The Significance of Architectural Restoration
