--- a/content/blog/the-evolution-of-sustainable-design.mdx
+++ b/content/blog/the-evolution-of-sustainable-design.mdx
@@ -8,7 +8,7 @@ categories:
   - title: Design
   - title: Renovation
 type: "Post"
-image: "/images/project-2-min.jpg"
+image: "/images/Agile.jpg"
 ---
 
 Sustainable design has come a long way since its inception. This post explores the history of sustainable architecture, from early passive design strategies to contemporary green building practices. Discover how architects have integrated eco-friendly materials, renewable energy sources, and innovative technologies to create buildings that minimize environmental impact.
