--- a/content/blog/the-power-of-minimalism-in-modern-architecture.mdx
+++ b/content/blog/the-power-of-minimalism-in-modern-architecture.mdx
@@ -8,7 +8,7 @@ categories:
   - title: Design
   - title: Architecture
 type: "Post"
-image: "/images/project-3-min.jpg"
+image: "/images/cahierDesCharges.jpg"
 ---
 
 ## The Psychology of Space: Designing Environments for Well-being
