--- a/content/blog/the-psychology-of-space-designing-environments-for-well-being.mdx
+++ b/content/blog/the-psychology-of-space-designing-environments-for-well-being.mdx
@@ -8,7 +8,7 @@ categories:
   - title: Design
   - title: Architecture
 type: "Post"
-image: "/images/post-3-min.jpg"
+image: "/images/Productivité.jpg"
 ---
 
 ## The Psychology of Space: Designing Environments for Well-being profound impact
